Example of used random distributions

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -40,7 +40,9 @@ find_package(MPI)
 if (MPI_FOUND)
   include_directories(${MPI_INCLUDE_DIRS} ${BLITZ_INCLUDE_DIR})
 #  target_link_libraries(run-jade-fdtd ${SUBDIRS} ${MPI_LIBRARIES} ${BLITZ_LIBRRIES} -lblitz)
-  target_link_libraries(run-jade-fdtd ${SUBDIRS} ${MPI_LIBRARIES})
+  target_link_libraries(run-jade-fdtd ${SUBDIRS} -lc++)
+
+#  target_link_libraries(run-jade-fdtd ${SUBDIRS} ${MPI_LIBRARIES})
   install( TARGETS run-jade-fdtd   DESTINATION ./    )
 else()
   message( FATAL_ERROR "JADE++ needs MPI libs installed!" )
