quasi PEC spectra

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,6 +22,7 @@ endforeach()
 # Create an executable file called run-onzf-fdtd from sources:
 add_executable(run-jade-test jade.cc  test-jade.cc)
 add_executable(run-optimize-cloak optimize-cloak.cc)
+add_executable(run-quasi-pec-spectra quasi-pec-spectra.cc)
 # subdirs names are synonyms for librarys names
 message("Searching for MPI...")
 find_package(MPI)
@@ -43,10 +44,12 @@ if (MPI_FOUND)
 #  target_link_libraries(run-jade-test ${SUBDIRS} ${MPI_LIBRARIES} ${BLITZ_LIBRRIES} -lblitz)
   target_link_libraries(run-jade-test ${SUBDIRS} -lc++)
   target_link_libraries(run-optimize-cloak ${SUBDIRS} -lc++)
+  target_link_libraries(run-quasi-pec-spectra ${SUBDIRS} -lc++)
 
 #  target_link_libraries(run-jade-test ${SUBDIRS} ${MPI_LIBRARIES})
   install( TARGETS run-jade-test   DESTINATION ./    )
   install( TARGETS run-optimize-cloak   DESTINATION ./    )
+  install( TARGETS run-quasi-pec-spectra   DESTINATION ./    )
 else()
   message( FATAL_ERROR "JADE++ needs MPI libs installed!" )
 endif()
