repaired stability test in nmie.cc

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,7 @@ endforeach()
 add_executable(run-jade-test jade.cc  test-jade.cc)
 add_executable(run-optimize-cloak optimize-cloak.cc)
 add_executable(run-quasi-pec-spectra quasi-pec-spectra.cc)
+add_executable(scattnlay scattnlay.cc)
 # subdirs names are synonyms for librarys names
 message("Searching for MPI...")
 find_package(MPI)
@@ -42,14 +43,16 @@ find_package(MPI)
 if (MPI_FOUND)
 #  include_directories(${MPI_INCLUDE_DIRS} ${BLITZ_INCLUDE_DIR} ${SUBDIRS} ${JADE++_SOURCE_DIR}/src)
 #  target_link_libraries(run-jade-test ${SUBDIRS} ${MPI_LIBRARIES} ${BLITZ_LIBRRIES} -lblitz)
-  target_link_libraries(run-jade-test ${SUBDIRS} -lc++)
-  target_link_libraries(run-optimize-cloak ${SUBDIRS} -lc++)
-  target_link_libraries(run-quasi-pec-spectra ${SUBDIRS} -lc++)
+  target_link_libraries(run-jade-test ${SUBDIRS})
+  target_link_libraries(run-optimize-cloak ${SUBDIRS})
+  target_link_libraries(run-quasi-pec-spectra ${SUBDIRS})
+  target_link_libraries(scattnlay ${SUBDIRS})
 
 #  target_link_libraries(run-jade-test ${SUBDIRS} ${MPI_LIBRARIES})
   install( TARGETS run-jade-test   DESTINATION ./    )
   install( TARGETS run-optimize-cloak   DESTINATION ./    )
   install( TARGETS run-quasi-pec-spectra   DESTINATION ./    )
+  install( TARGETS scattnlay   DESTINATION ./    )
 else()
   message( FATAL_ERROR "JADE++ needs MPI libs installed!" )
 endif()
