--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,7 @@ endforeach()
 # Create an executable file called run-onzf-fdtd from sources:
 
 add_executable(run-jade-test jade.cc  test-jade.cc)
+add_executable(run-jade-single jade.cc  test-jade-single-function.cc)
 add_executable(run-optimize-cloak jade.cc optimize-cloak.cc)
 add_executable(run-quasi-pec-spectra quasi-pec-spectra.cc)
 add_executable(scattnlay scattnlay.cc)
@@ -46,12 +47,14 @@ if (MPI_FOUND)
 #  include_directories(${MPI_INCLUDE_DIRS} ${BLITZ_INCLUDE_DIR} ${SUBDIRS} ${JADE++_SOURCE_DIR}/src)
 #  target_link_libraries(run-jade-test ${SUBDIRS} ${MPI_LIBRARIES} ${BLITZ_LIBRRIES} -lblitz)
   target_link_libraries(run-jade-test ${SUBDIRS})
+  target_link_libraries(run-jade-single ${SUBDIRS})
   target_link_libraries(run-optimize-cloak ${SUBDIRS})
   target_link_libraries(run-quasi-pec-spectra ${SUBDIRS})
   target_link_libraries(scattnlay ${SUBDIRS})
 
 #  target_link_libraries(run-jade-test ${SUBDIRS} ${MPI_LIBRARIES})
   install( TARGETS run-jade-test   DESTINATION ./    )
+  install( TARGETS run-jade-single   DESTINATION ./    )
   install( TARGETS run-optimize-cloak   DESTINATION ./    )
   install( TARGETS run-quasi-pec-spectra   DESTINATION ./    )
   install( TARGETS scattnlay   DESTINATION ./    )
