Add simulation of meander cloak

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,7 @@ endforeach()
 add_executable(run-jade-test jade.cc  test-jade.cc)
 add_executable(run-jade-single jade.cc  test-jade-single-function.cc)
 add_executable(run-optimize-cloak jade.cc optimize-cloak.cc)
+add_executable(run-optimize-meander-cloak jade.cc optimize-meander-cloak.cc)
 add_executable(run-size-sweep jade.cc size-sweep.cc)
 add_executable(run-quasi-pec-spectra quasi-pec-spectra.cc)
 add_executable(scattnlay scattnlay.cc)
@@ -50,6 +51,7 @@ if (MPI_FOUND)
   target_link_libraries(run-jade-test ${SUBDIRS})
   target_link_libraries(run-jade-single ${SUBDIRS})
   target_link_libraries(run-optimize-cloak ${SUBDIRS})
+  target_link_libraries(run-optimize-meander-cloak ${SUBDIRS})
   target_link_libraries(run-size-sweep ${SUBDIRS})
   target_link_libraries(run-quasi-pec-spectra ${SUBDIRS})
   target_link_libraries(scattnlay ${SUBDIRS})
@@ -58,6 +60,7 @@ if (MPI_FOUND)
   install( TARGETS run-jade-test   DESTINATION ./    )
   install( TARGETS run-jade-single   DESTINATION ./    )
   install( TARGETS run-optimize-cloak   DESTINATION ./    )
+  install( TARGETS run-optimize-meander-cloak   DESTINATION ./    )
   install( TARGETS run-size-sweep   DESTINATION ./    )
   install( TARGETS run-quasi-pec-spectra   DESTINATION ./    )
   install( TARGETS scattnlay   DESTINATION ./    )
