--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(run-optimize-cloak jade.cc optimize-cloak.cc)
 add_executable(run-optimize-meander-cloak jade.cc optimize-meander-cloak.cc)
 add_executable(run-size-sweep jade.cc size-sweep.cc)
 add_executable(run-coating-w-sweep jade.cc coating-w-sweep.cc)
+add_executable(run-coating-w-sweep-2layers jade.cc coating-w-sweep-2layers.cc)
 add_executable(run-quasi-pec-spectra quasi-pec-spectra.cc)
 add_executable(scattnlay scattnlay.cc)
 # subdirs names are synonyms for librarys names
@@ -55,6 +56,7 @@ if (MPI_FOUND)
   target_link_libraries(run-optimize-meander-cloak ${SUBDIRS})
   target_link_libraries(run-size-sweep ${SUBDIRS})
   target_link_libraries(run-coating-w-sweep ${SUBDIRS})
+  target_link_libraries(run-coating-w-sweep-2layers ${SUBDIRS})
   target_link_libraries(run-quasi-pec-spectra ${SUBDIRS})
   target_link_libraries(scattnlay ${SUBDIRS})
 
@@ -65,6 +67,7 @@ if (MPI_FOUND)
   install( TARGETS run-optimize-meander-cloak   DESTINATION ./    )
   install( TARGETS run-size-sweep   DESTINATION ./    )
   install( TARGETS run-coating-w-sweep   DESTINATION ./    )
+  install( TARGETS run-coating-w-sweep-2layers   DESTINATION ./    )
   install( TARGETS run-quasi-pec-spectra   DESTINATION ./    )
   install( TARGETS scattnlay   DESTINATION ./    )
 else()
