--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(run-jade-single jade.cc  test-jade-single-function.cc)
 add_executable(run-optimize-cloak jade.cc optimize-cloak.cc)
 add_executable(run-optimize-meander-cloak jade.cc optimize-meander-cloak.cc)
 add_executable(run-optimize-meander-cloak-2layer jade.cc optimize-meander-cloak-2layer.cc)
+add_executable(run-optimize-meander-cloak-3layer jade.cc optimize-meander-cloak-3layer.cc)
 add_executable(run-size-sweep jade.cc size-sweep.cc)
 add_executable(run-coating-w-sweep jade.cc coating-w-sweep.cc)
 add_executable(run-coating-w-sweep-2layers jade.cc coating-w-sweep-2layers.cc)
@@ -56,6 +57,7 @@ if (MPI_FOUND)
   target_link_libraries(run-optimize-cloak ${SUBDIRS})
   target_link_libraries(run-optimize-meander-cloak ${SUBDIRS})
   target_link_libraries(run-optimize-meander-cloak-2layer ${SUBDIRS})
+  target_link_libraries(run-optimize-meander-cloak-3layer ${SUBDIRS})
   target_link_libraries(run-size-sweep ${SUBDIRS})
   target_link_libraries(run-coating-w-sweep ${SUBDIRS})
   target_link_libraries(run-coating-w-sweep-2layers ${SUBDIRS})
@@ -68,6 +70,7 @@ if (MPI_FOUND)
   install( TARGETS run-optimize-cloak   DESTINATION ./    )
   install( TARGETS run-optimize-meander-cloak   DESTINATION ./    )
   install( TARGETS run-optimize-meander-cloak-2layer   DESTINATION ./    )
+  install( TARGETS run-optimize-meander-cloak-3layer   DESTINATION ./    )
   install( TARGETS run-size-sweep   DESTINATION ./    )
   install( TARGETS run-coating-w-sweep   DESTINATION ./    )
   install( TARGETS run-coating-w-sweep-2layers   DESTINATION ./    )
