4 and 5 layer meander

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,6 +28,8 @@ add_executable(run-optimize-cloak jade.cc optimize-cloak.cc)
 add_executable(run-optimize-meander-cloak jade.cc optimize-meander-cloak.cc)
 add_executable(run-optimize-meander-cloak-2layer jade.cc optimize-meander-cloak-2layer.cc)
 add_executable(run-optimize-meander-cloak-3layer jade.cc optimize-meander-cloak-3layer.cc)
+add_executable(run-optimize-meander-cloak-4layer jade.cc optimize-meander-cloak-4layer.cc)
+add_executable(run-optimize-meander-cloak-5layer jade.cc optimize-meander-cloak-5layer.cc)
 add_executable(run-size-sweep jade.cc size-sweep.cc)
 add_executable(run-coating-w-sweep jade.cc coating-w-sweep.cc)
 add_executable(run-coating-w-sweep-2layers jade.cc coating-w-sweep-2layers.cc)
@@ -58,6 +60,8 @@ if (MPI_FOUND)
   target_link_libraries(run-optimize-meander-cloak ${SUBDIRS})
   target_link_libraries(run-optimize-meander-cloak-2layer ${SUBDIRS})
   target_link_libraries(run-optimize-meander-cloak-3layer ${SUBDIRS})
+  target_link_libraries(run-optimize-meander-cloak-4layer ${SUBDIRS})
+  target_link_libraries(run-optimize-meander-cloak-5layer ${SUBDIRS})
   target_link_libraries(run-size-sweep ${SUBDIRS})
   target_link_libraries(run-coating-w-sweep ${SUBDIRS})
   target_link_libraries(run-coating-w-sweep-2layers ${SUBDIRS})
@@ -71,6 +75,8 @@ if (MPI_FOUND)
   install( TARGETS run-optimize-meander-cloak   DESTINATION ./    )
   install( TARGETS run-optimize-meander-cloak-2layer   DESTINATION ./    )
   install( TARGETS run-optimize-meander-cloak-3layer   DESTINATION ./    )
+  install( TARGETS run-optimize-meander-cloak-4layer   DESTINATION ./    )
+  install( TARGETS run-optimize-meander-cloak-5layer   DESTINATION ./    )
   install( TARGETS run-size-sweep   DESTINATION ./    )
   install( TARGETS run-coating-w-sweep   DESTINATION ./    )
   install( TARGETS run-coating-w-sweep-2layers   DESTINATION ./    )
