Start of the library to read dispersion spectra

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,8 +25,10 @@ endforeach()
 # add_executable(run-jade-test jade.cc  test-jade.cc)
 # add_executable(run-jade-test-feed jade.cc  test-jade-feed.cc)
 # add_executable(run-jade-single jade.cc  test-jade-single-function.cc)
-add_executable(run-optimize-cloak jade.cc optimize-cloak.cc)
+#add_executable(run-optimize-cloak jade.cc optimize-cloak.cc)
 add_executable(run-optimize-feed-cloak jade.cc optimize-feed-cloak.cc)
+add_executable(run-optimize-absorber-TiN jade.cc optimize-absorber-TiN.cc)
+
 # add_executable(run-optimize-meander-cloak jade.cc optimize-meander-cloak.cc)
 # add_executable(run-optimize-meander-cloak-2layer jade.cc optimize-meander-cloak-2layer.cc)
 # add_executable(run-optimize-meander-cloak-3layer jade.cc optimize-meander-cloak-3layer.cc)
@@ -61,8 +63,9 @@ if (MPI_FOUND)
   # target_link_libraries(run-jade-test ${SUBDIRS})
   # target_link_libraries(run-jade-test-feed ${SUBDIRS})
   # target_link_libraries(run-jade-single ${SUBDIRS})
-  target_link_libraries(run-optimize-cloak ${SUBDIRS})
+  # target_link_libraries(run-optimize-cloak ${SUBDIRS})
   target_link_libraries(run-optimize-feed-cloak ${SUBDIRS})
+  target_link_libraries(run-optimize-absorber-TiN ${SUBDIRS})
   # target_link_libraries(run-optimize-meander-cloak ${SUBDIRS})
   # target_link_libraries(run-optimize-meander-cloak-2layer ${SUBDIRS})
   # target_link_libraries(run-optimize-meander-cloak-3layer ${SUBDIRS})
@@ -79,8 +82,9 @@ if (MPI_FOUND)
   # install( TARGETS run-jade-test   DESTINATION ./    )
   # install( TARGETS run-jade-test-feed   DESTINATION ./    )
   # install( TARGETS run-jade-single   DESTINATION ./    )
-  install( TARGETS run-optimize-cloak   DESTINATION ./    )
+  # install( TARGETS run-optimize-cloak   DESTINATION ./    )
   install( TARGETS run-optimize-feed-cloak   DESTINATION ./    )
+  install( TARGETS run-optimize-absorber-TiN   DESTINATION ./    )
   # install( TARGETS run-optimize-meander-cloak   DESTINATION ./    )
   # install( TARGETS run-optimize-meander-cloak-2layer   DESTINATION ./    )
   # install( TARGETS run-optimize-meander-cloak-3layer   DESTINATION ./    )
@@ -91,6 +95,7 @@ if (MPI_FOUND)
   # install( TARGETS run-coating-w-sweep-2layers   DESTINATION ./    )
   # install( TARGETS run-quasi-pec-spectra   DESTINATION ./    )
   # install( TARGETS scattnlay   DESTINATION ./    )
+  
 else()
   message( FATAL_ERROR "JADE++ needs MPI libs installed!" )
 endif()
