super scatter drude

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,6 +28,7 @@ endforeach()
 #add_executable(run-optimize-cloak jade.cc optimize-cloak.cc)
 add_executable(run-optimize-feed-cloak jade.cc optimize-feed-cloak.cc)
 add_executable(run-optimize-absorber-TiN jade.cc optimize-absorber-TiN.cc)
+add_executable(run-superscatter-drude superscatter-drude.cc)
 
 # add_executable(run-optimize-meander-cloak jade.cc optimize-meander-cloak.cc)
 # add_executable(run-optimize-meander-cloak-2layer jade.cc optimize-meander-cloak-2layer.cc)
@@ -66,6 +67,7 @@ if (MPI_FOUND)
   # target_link_libraries(run-optimize-cloak ${SUBDIRS})
   target_link_libraries(run-optimize-feed-cloak ${SUBDIRS})
   target_link_libraries(run-optimize-absorber-TiN ${SUBDIRS})
+  target_link_libraries(run-superscatter-drude ${SUBDIRS})
   # target_link_libraries(run-optimize-meander-cloak ${SUBDIRS})
   # target_link_libraries(run-optimize-meander-cloak-2layer ${SUBDIRS})
   # target_link_libraries(run-optimize-meander-cloak-3layer ${SUBDIRS})
@@ -85,6 +87,7 @@ if (MPI_FOUND)
   # install( TARGETS run-optimize-cloak   DESTINATION ./    )
   install( TARGETS run-optimize-feed-cloak   DESTINATION ./    )
   install( TARGETS run-optimize-absorber-TiN   DESTINATION ./    )
+  install( TARGETS run-superscatter-drude   DESTINATION ./    )
   # install( TARGETS run-optimize-meander-cloak   DESTINATION ./    )
   # install( TARGETS run-optimize-meander-cloak-2layer   DESTINATION ./    )
   # install( TARGETS run-optimize-meander-cloak-3layer   DESTINATION ./    )
