--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,10 +26,11 @@ endforeach()
 # add_executable(run-jade-test-feed jade.cc  test-jade-feed.cc)
 # add_executable(run-jade-single jade.cc  test-jade-single-function.cc)
 #add_executable(run-optimize-cloak jade.cc optimize-cloak.cc)
-add_executable(run-optimize-feed-cloak jade.cc optimize-feed-cloak.cc)
+#add_executable(run-optimize-feed-cloak jade.cc optimize-feed-cloak.cc)
 add_executable(run-optimize-absorber-TiN jade.cc optimize-absorber-TiN.cc)
 add_executable(run-superscatter-drude superscatter-drude.cc)
-
+add_executable(run-optimize-superscatter-drude  jade.cc optimize-superscatter-drude.cc)
+#add_executable(run-absorb-Ag-in-glass absorb-Ag-in-glass.cc)
 # add_executable(run-optimize-meander-cloak jade.cc optimize-meander-cloak.cc)
 # add_executable(run-optimize-meander-cloak-2layer jade.cc optimize-meander-cloak-2layer.cc)
 # add_executable(run-optimize-meander-cloak-3layer jade.cc optimize-meander-cloak-3layer.cc)
@@ -65,9 +66,11 @@ if (MPI_FOUND)
   # target_link_libraries(run-jade-test-feed ${SUBDIRS})
   # target_link_libraries(run-jade-single ${SUBDIRS})
   # target_link_libraries(run-optimize-cloak ${SUBDIRS})
-  target_link_libraries(run-optimize-feed-cloak ${SUBDIRS})
+  # target_link_libraries(run-optimize-feed-cloak ${SUBDIRS})
   target_link_libraries(run-optimize-absorber-TiN ${SUBDIRS})
   target_link_libraries(run-superscatter-drude ${SUBDIRS})
+  target_link_libraries(run-optimize-superscatter-drude ${SUBDIRS})
+  # target_link_libraries(run-absorb-Ag-in-glass ${SUBDIRS})
   # target_link_libraries(run-optimize-meander-cloak ${SUBDIRS})
   # target_link_libraries(run-optimize-meander-cloak-2layer ${SUBDIRS})
   # target_link_libraries(run-optimize-meander-cloak-3layer ${SUBDIRS})
@@ -79,15 +82,17 @@ if (MPI_FOUND)
   # target_link_libraries(run-quasi-pec-spectra ${SUBDIRS})
   # target_link_libraries(scattnlay ${SUBDIRS})
 
-#  target_link_libraries(run-jade-test ${SUBDIRS} ${MPI_LIBRARIES})
+  #  target_link_libraries(run-jade-test ${SUBDIRS} ${MPI_LIBRARIES})
 
   # install( TARGETS run-jade-test   DESTINATION ./    )
   # install( TARGETS run-jade-test-feed   DESTINATION ./    )
   # install( TARGETS run-jade-single   DESTINATION ./    )
   # install( TARGETS run-optimize-cloak   DESTINATION ./    )
-  install( TARGETS run-optimize-feed-cloak   DESTINATION ./    )
+  # install( TARGETS run-optimize-feed-cloak   DESTINATION ./    )
   install( TARGETS run-optimize-absorber-TiN   DESTINATION ./    )
   install( TARGETS run-superscatter-drude   DESTINATION ./    )
+  install( TARGETS run-optimize-superscatter-drude   DESTINATION ./    )
+  #install( TARGETS run-absorb-Ag-in-glass   DESTINATION ./    )
   # install( TARGETS run-optimize-meander-cloak   DESTINATION ./    )
   # install( TARGETS run-optimize-meander-cloak-2layer   DESTINATION ./    )
   # install( TARGETS run-optimize-meander-cloak-3layer   DESTINATION ./    )
