added Alu optimization

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,8 +27,9 @@ endforeach()
 # add_executable(run-jade-single jade.cc  test-jade-single-function.cc)
 # add_executable(run-optimize-cloak jade.cc optimize-cloak.cc)
 # add_executable(run-optimize-feed-cloak jade.cc optimize-feed-cloak.cc)
-add_executable(run-optimize-absorber-TiN jade.cc optimize-absorber-TiN.cc)
-add_executable(run-optimize-absorber-TiN-bi jade.cc optimize-absorber-TiN-bi.cc)
+add_executable(run-optimize-alu jade.cc optimize-alu.cc)
+# add_executable(run-optimize-absorber-TiN jade.cc optimize-absorber-TiN.cc)
+# add_executable(run-optimize-absorber-TiN-bi jade.cc optimize-absorber-TiN-bi.cc)
 #add_executable(run-optimize-ideal-bulk jade.cc optimize-ideal-bulk.cc)
 # add_executable(run-superscatter-drude superscatter-drude.cc)
 # add_executable(run-optimize-superscatter-drude  jade.cc optimize-superscatter-drude.cc)
@@ -69,9 +70,10 @@ if (MPI_FOUND)
   # target_link_libraries(run-jade-single ${SUBDIRS})
   # target_link_libraries(run-optimize-cloak ${SUBDIRS})
   # target_link_libraries(run-optimize-feed-cloak ${SUBDIRS})
-  target_link_libraries(run-optimize-absorber-TiN ${SUBDIRS})
-  target_link_libraries(run-optimize-absorber-TiN-bi ${SUBDIRS})
-  #target_link_libraries(run-optimize-ideal-bulk ${SUBDIRS})
+  # target_link_libraries(run-optimize-absorber-TiN ${SUBDIRS})
+  target_link_libraries(run-optimize-alu ${SUBDIRS})
+  # target_link_libraries(run-optimize-absorber-TiN-bi ${SUBDIRS})
+  # target_link_libraries(run-optimize-ideal-bulk ${SUBDIRS})
   # target_link_libraries(run-superscatter-drude ${SUBDIRS})
   # target_link_libraries(run-optimize-superscatter-drude ${SUBDIRS})
   # target_link_libraries(run-absorb-Ag-in-glass ${SUBDIRS})
@@ -93,8 +95,9 @@ if (MPI_FOUND)
   # install( TARGETS run-jade-single   DESTINATION ./    )
   # install( TARGETS run-optimize-cloak   DESTINATION ./    )
   # install( TARGETS run-optimize-feed-cloak   DESTINATION ./    )
-  install( TARGETS run-optimize-absorber-TiN   DESTINATION ./    )
-  install( TARGETS run-optimize-absorber-TiN-bi   DESTINATION ./    )
+  install( TARGETS run-optimize-alu   DESTINATION ./    )
+  # install( TARGETS run-optimize-absorber-TiN   DESTINATION ./    )
+  # install( TARGETS run-optimize-absorber-TiN-bi   DESTINATION ./    )
   #install( TARGETS run-optimize-ideal-bulk   DESTINATION ./    )
   # install( TARGETS run-superscatter-drude   DESTINATION ./    )
   # install( TARGETS run-optimize-superscatter-drude   DESTINATION ./    )
