--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,7 @@ endforeach()
 # add_executable(run-optimize-feed-cloak jade.cc optimize-feed-cloak.cc)
 # add_executable(run-optimize-alu jade.cc optimize-alu.cc)
 add_executable(run-optimize-absorber-TiN jade.cc optimize-absorber-TiN.cc)
+add_executable(run-optimize-absorber-TiN-wideband jade.cc optimize-absorber-TiN-wideband.cc)
 # add_executable(run-optimize-absorber-TiN-bi jade.cc optimize-absorber-TiN-bi.cc)
 #add_executable(run-optimize-ideal-bulk jade.cc optimize-ideal-bulk.cc)
 # add_executable(run-superscatter-drude superscatter-drude.cc)
@@ -71,6 +72,7 @@ if (MPI_FOUND)
   # target_link_libraries(run-optimize-cloak ${SUBDIRS})
   # target_link_libraries(run-optimize-feed-cloak ${SUBDIRS})
   target_link_libraries(run-optimize-absorber-TiN ${SUBDIRS})
+  target_link_libraries(run-optimize-absorber-TiN-wideband ${SUBDIRS})
   # target_link_libraries(run-optimize-alu ${SUBDIRS})
   # target_link_libraries(run-optimize-absorber-TiN-bi ${SUBDIRS})
   # target_link_libraries(run-optimize-ideal-bulk ${SUBDIRS})
@@ -80,7 +82,7 @@ if (MPI_FOUND)
   # target_link_libraries(run-optimize-meander-cloak ${SUBDIRS})
   # target_link_libraries(run-optimize-meander-cloak-2layer ${SUBDIRS})
   # target_link_libraries(run-optimize-meander-cloak-3layer ${SUBDIRS})
-   target_link_libraries(run-optimize-meander-cloak-4layer ${SUBDIRS})
+  target_link_libraries(run-optimize-meander-cloak-4layer ${SUBDIRS})
   # target_link_libraries(run-optimize-meander-cloak-5layer ${SUBDIRS})
   # target_link_libraries(run-size-sweep ${SUBDIRS})
   # target_link_libraries(run-coating-w-sweep ${SUBDIRS})
@@ -97,6 +99,7 @@ if (MPI_FOUND)
   # install( TARGETS run-optimize-feed-cloak   DESTINATION ./    )
   # install( TARGETS run-optimize-alu   DESTINATION ./    )
   install( TARGETS run-optimize-absorber-TiN   DESTINATION ./    )
+  install( TARGETS run-optimize-absorber-TiN-wideband   DESTINATION ./    )
   # install( TARGETS run-optimize-absorber-TiN-bi   DESTINATION ./    )
   #install( TARGETS run-optimize-ideal-bulk   DESTINATION ./    )
   # install( TARGETS run-superscatter-drude   DESTINATION ./    )
