--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,8 +28,9 @@ endforeach()
 # add_executable(run-optimize-cloak jade.cc optimize-cloak.cc)
 # add_executable(run-optimize-feed-cloak jade.cc optimize-feed-cloak.cc)
 # add_executable(run-optimize-alu jade.cc optimize-alu.cc)
-add_executable(run-optimize-absorber-TiN jade.cc optimize-absorber-TiN.cc)
-add_executable(run-optimize-absorber-TiN-wideband jade.cc optimize-absorber-TiN-wideband.cc)
+add_executable(run-optimize-scatter-Au-SiO2 jade.cc optimize-scatter-Au-SiO2.cc)
+#add_executable(run-optimize-absorber-TiN jade.cc optimize-absorber-TiN.cc)
+# add_executable(run-optimize-absorber-TiN-wideband jade.cc optimize-absorber-TiN-wideband.cc)
 # add_executable(run-optimize-absorber-TiN-bi jade.cc optimize-absorber-TiN-bi.cc)
 #add_executable(run-optimize-ideal-bulk jade.cc optimize-ideal-bulk.cc)
 # add_executable(run-superscatter-drude superscatter-drude.cc)
@@ -38,7 +39,7 @@ add_executable(run-optimize-absorber-TiN-wideband jade.cc optimize-absorber-TiN-
 # add_executable(run-optimize-meander-cloak jade.cc optimize-meander-cloak.cc)
 # add_executable(run-optimize-meander-cloak-2layer jade.cc optimize-meander-cloak-2layer.cc)
 # add_executable(run-optimize-meander-cloak-3layer jade.cc optimize-meander-cloak-3layer.cc)
-add_executable(run-optimize-meander-cloak-4layer jade.cc optimize-meander-cloak-4layer.cc)
+# add_executable(run-optimize-meander-cloak-4layer jade.cc optimize-meander-cloak-4layer.cc)
 # add_executable(run-optimize-meander-cloak-5layer jade.cc optimize-meander-cloak-5layer.cc)
 # add_executable(run-size-sweep jade.cc size-sweep.cc)
 # add_executable(run-coating-w-sweep jade.cc coating-w-sweep.cc)
@@ -71,8 +72,9 @@ if (MPI_FOUND)
   # target_link_libraries(run-jade-single ${SUBDIRS})
   # target_link_libraries(run-optimize-cloak ${SUBDIRS})
   # target_link_libraries(run-optimize-feed-cloak ${SUBDIRS})
-  target_link_libraries(run-optimize-absorber-TiN ${SUBDIRS})
-  target_link_libraries(run-optimize-absorber-TiN-wideband ${SUBDIRS})
+  target_link_libraries(run-optimize-scatter-Au-SiO2 ${SUBDIRS})
+  # target_link_libraries(run-optimize-absorber-TiN ${SUBDIRS})
+  # target_link_libraries(run-optimize-absorber-TiN-wideband ${SUBDIRS})
   # target_link_libraries(run-optimize-alu ${SUBDIRS})
   # target_link_libraries(run-optimize-absorber-TiN-bi ${SUBDIRS})
   # target_link_libraries(run-optimize-ideal-bulk ${SUBDIRS})
@@ -82,7 +84,7 @@ if (MPI_FOUND)
   # target_link_libraries(run-optimize-meander-cloak ${SUBDIRS})
   # target_link_libraries(run-optimize-meander-cloak-2layer ${SUBDIRS})
   # target_link_libraries(run-optimize-meander-cloak-3layer ${SUBDIRS})
-  target_link_libraries(run-optimize-meander-cloak-4layer ${SUBDIRS})
+  # target_link_libraries(run-optimize-meander-cloak-4layer ${SUBDIRS})
   # target_link_libraries(run-optimize-meander-cloak-5layer ${SUBDIRS})
   # target_link_libraries(run-size-sweep ${SUBDIRS})
   # target_link_libraries(run-coating-w-sweep ${SUBDIRS})
@@ -98,8 +100,9 @@ if (MPI_FOUND)
   # install( TARGETS run-optimize-cloak   DESTINATION ./    )
   # install( TARGETS run-optimize-feed-cloak   DESTINATION ./    )
   # install( TARGETS run-optimize-alu   DESTINATION ./    )
-  install( TARGETS run-optimize-absorber-TiN   DESTINATION ./    )
-  install( TARGETS run-optimize-absorber-TiN-wideband   DESTINATION ./    )
+  install( TARGETS run-optimize-scatter-Au-SiO2   DESTINATION ./    )
+  # install( TARGETS run-optimize-absorber-TiN   DESTINATION ./    )
+  # install( TARGETS run-optimize-absorber-TiN-wideband   DESTINATION ./    )
   # install( TARGETS run-optimize-absorber-TiN-bi   DESTINATION ./    )
   #install( TARGETS run-optimize-ideal-bulk   DESTINATION ./    )
   # install( TARGETS run-superscatter-drude   DESTINATION ./    )
@@ -108,7 +111,7 @@ if (MPI_FOUND)
   # install( TARGETS run-optimize-meander-cloak   DESTINATION ./    )
   # install( TARGETS run-optimize-meander-cloak-2layer   DESTINATION ./    )
   # install( TARGETS run-optimize-meander-cloak-3layer   DESTINATION ./    )
-  install( TARGETS run-optimize-meander-cloak-4layer   DESTINATION ./    )
+  # install( TARGETS run-optimize-meander-cloak-4layer   DESTINATION ./    )
   # install( TARGETS run-optimize-meander-cloak-5layer   DESTINATION ./    )
   # install( TARGETS run-size-sweep   DESTINATION ./    )
   # install( TARGETS run-coating-w-sweep   DESTINATION ./    )
