--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,6 +31,7 @@ endforeach()
 add_executable(run-optimize-scatter-Au-SiO2 jade.cc optimize-scatter-Au-SiO2.cc)
 #add_executable(run-optimize-absorber-TiN jade.cc optimize-absorber-TiN.cc)
 # add_executable(run-optimize-absorber-TiN-wideband jade.cc optimize-absorber-TiN-wideband.cc)
+add_executable(run-optimize-absorber-two-band jade.cc optimize-absorber-two-band.cc)
 # add_executable(run-optimize-absorber-TiN-bi jade.cc optimize-absorber-TiN-bi.cc)
 #add_executable(run-optimize-ideal-bulk jade.cc optimize-ideal-bulk.cc)
 # add_executable(run-superscatter-drude superscatter-drude.cc)
@@ -75,6 +76,7 @@ if (MPI_FOUND)
   target_link_libraries(run-optimize-scatter-Au-SiO2 ${SUBDIRS})
   # target_link_libraries(run-optimize-absorber-TiN ${SUBDIRS})
   # target_link_libraries(run-optimize-absorber-TiN-wideband ${SUBDIRS})
+  # target_link_libraries(run-optimize-absorber-two-band ${SUBDIRS})
   # target_link_libraries(run-optimize-alu ${SUBDIRS})
   # target_link_libraries(run-optimize-absorber-TiN-bi ${SUBDIRS})
   # target_link_libraries(run-optimize-ideal-bulk ${SUBDIRS})
@@ -103,6 +105,7 @@ if (MPI_FOUND)
   install( TARGETS run-optimize-scatter-Au-SiO2   DESTINATION ./    )
   # install( TARGETS run-optimize-absorber-TiN   DESTINATION ./    )
   # install( TARGETS run-optimize-absorber-TiN-wideband   DESTINATION ./    )
+  install( TARGETS run-optimize-absorber-two-band   DESTINATION ./    )
   # install( TARGETS run-optimize-absorber-TiN-bi   DESTINATION ./    )
   #install( TARGETS run-optimize-ideal-bulk   DESTINATION ./    )
   # install( TARGETS run-superscatter-drude   DESTINATION ./    )
