--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -76,7 +76,7 @@ if (MPI_FOUND)
   target_link_libraries(run-optimize-scatter-Au-SiO2 ${SUBDIRS})
   # target_link_libraries(run-optimize-absorber-TiN ${SUBDIRS})
   # target_link_libraries(run-optimize-absorber-TiN-wideband ${SUBDIRS})
-  # target_link_libraries(run-optimize-absorber-two-band ${SUBDIRS})
+  target_link_libraries(run-optimize-absorber-two-band ${SUBDIRS})
   # target_link_libraries(run-optimize-alu ${SUBDIRS})
   # target_link_libraries(run-optimize-absorber-TiN-bi ${SUBDIRS})
   # target_link_libraries(run-optimize-ideal-bulk ${SUBDIRS})
