--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,9 +22,9 @@ endforeach()
 #file(GLOB JADE++_SOURCES *.cc *.c) 
 # Create an executable file called run-onzf-fdtd from sources:
 
-# add_executable(run-jade-test jade.cc  test-jade.cc)
+add_executable(run-jade-test jade.cc  test-jade.cc)
 # add_executable(run-jade-test-feed jade.cc  test-jade-feed.cc)
-# add_executable(run-jade-single jade.cc  test-jade-single-function.cc)
+add_executable(run-jade-single jade.cc  test-jade-single-function.cc)
 # add_executable(run-optimize-cloak jade.cc optimize-cloak.cc)
 # add_executable(run-optimize-feed-cloak jade.cc optimize-feed-cloak.cc)
 # add_executable(run-optimize-alu jade.cc optimize-alu.cc)
@@ -68,9 +68,9 @@ if (MPI_FOUND)
 #  include_directories(${MPI_INCLUDE_DIRS} ${BLITZ_INCLUDE_DIR} ${SUBDIRS} ${JADE++_SOURCE_DIR}/src)
 #  target_link_libraries(run-jade-test ${SUBDIRS} ${MPI_LIBRARIES} ${BLITZ_LIBRRIES} -lblitz)
 
-  # target_link_libraries(run-jade-test ${SUBDIRS})
+  target_link_libraries(run-jade-test ${SUBDIRS})
   # target_link_libraries(run-jade-test-feed ${SUBDIRS})
-  # target_link_libraries(run-jade-single ${SUBDIRS})
+  target_link_libraries(run-jade-single ${SUBDIRS})
   # target_link_libraries(run-optimize-cloak ${SUBDIRS})
   # target_link_libraries(run-optimize-feed-cloak ${SUBDIRS})
   target_link_libraries(run-optimize-scatter-Au-SiO2 ${SUBDIRS})
@@ -96,9 +96,9 @@ if (MPI_FOUND)
 
   #  target_link_libraries(run-jade-test ${SUBDIRS} ${MPI_LIBRARIES})
 
-  # install( TARGETS run-jade-test   DESTINATION ./    )
+  install( TARGETS run-jade-test   DESTINATION ./    )
   # install( TARGETS run-jade-test-feed   DESTINATION ./    )
-  # install( TARGETS run-jade-single   DESTINATION ./    )
+  install( TARGETS run-jade-single   DESTINATION ./    )
   # install( TARGETS run-optimize-cloak   DESTINATION ./    )
   # install( TARGETS run-optimize-feed-cloak   DESTINATION ./    )
   # install( TARGETS run-optimize-alu   DESTINATION ./    )
