--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,16 +22,16 @@ endforeach()
 #file(GLOB JADE++_SOURCES *.cc *.c) 
 # Create an executable file called run-onzf-fdtd from sources:
 
-# add_executable(run-jade-test jade.cc  test-jade.cc)
+add_executable(run-jade-test jade.cc  test-jade.cc)
 # add_executable(run-jade-test-feed jade.cc  test-jade-feed.cc)
 # add_executable(run-jade-single jade.cc  test-jade-single-function.cc)
 # add_executable(run-optimize-cloak jade.cc optimize-cloak.cc)
 # add_executable(run-optimize-feed-cloak jade.cc optimize-feed-cloak.cc)
 # add_executable(run-optimize-alu jade.cc optimize-alu.cc)
-add_executable(run-optimize-scatter-Au-SiO2 jade.cc optimize-scatter-Au-SiO2.cc)
+#add_executable(run-optimize-scatter-Au-SiO2 jade.cc optimize-scatter-Au-SiO2.cc)
 #add_executable(run-optimize-absorber-TiN jade.cc optimize-absorber-TiN.cc)
 # add_executable(run-optimize-absorber-TiN-wideband jade.cc optimize-absorber-TiN-wideband.cc)
-add_executable(run-optimize-absorber-two-band jade.cc optimize-absorber-two-band.cc)
+#add_executable(run-optimize-absorber-two-band jade.cc optimize-absorber-two-band.cc)
 # add_executable(run-optimize-absorber-TiN-bi jade.cc optimize-absorber-TiN-bi.cc)
 #add_executable(run-optimize-ideal-bulk jade.cc optimize-ideal-bulk.cc)
 # add_executable(run-superscatter-drude superscatter-drude.cc)
@@ -68,15 +68,15 @@ if (MPI_FOUND)
 #  include_directories(${MPI_INCLUDE_DIRS} ${BLITZ_INCLUDE_DIR} ${SUBDIRS} ${JADE++_SOURCE_DIR}/src)
 #  target_link_libraries(run-jade-test ${SUBDIRS} ${MPI_LIBRARIES} ${BLITZ_LIBRRIES} -lblitz)
 
-  # target_link_libraries(run-jade-test ${SUBDIRS})
+  target_link_libraries(run-jade-test ${SUBDIRS})
   # target_link_libraries(run-jade-test-feed ${SUBDIRS})
   # target_link_libraries(run-jade-single ${SUBDIRS})
   # target_link_libraries(run-optimize-cloak ${SUBDIRS})
   # target_link_libraries(run-optimize-feed-cloak ${SUBDIRS})
-  target_link_libraries(run-optimize-scatter-Au-SiO2 ${SUBDIRS})
+#  target_link_libraries(run-optimize-scatter-Au-SiO2 ${SUBDIRS})
   # target_link_libraries(run-optimize-absorber-TiN ${SUBDIRS})
   # target_link_libraries(run-optimize-absorber-TiN-wideband ${SUBDIRS})
-  target_link_libraries(run-optimize-absorber-two-band ${SUBDIRS})
+#  target_link_libraries(run-optimize-absorber-two-band ${SUBDIRS})
   # target_link_libraries(run-optimize-alu ${SUBDIRS})
   # target_link_libraries(run-optimize-absorber-TiN-bi ${SUBDIRS})
   # target_link_libraries(run-optimize-ideal-bulk ${SUBDIRS})
@@ -96,16 +96,16 @@ if (MPI_FOUND)
 
   #  target_link_libraries(run-jade-test ${SUBDIRS} ${MPI_LIBRARIES})
 
-  # install( TARGETS run-jade-test   DESTINATION ./    )
+  install( TARGETS run-jade-test   DESTINATION ./    )
   # install( TARGETS run-jade-test-feed   DESTINATION ./    )
   # install( TARGETS run-jade-single   DESTINATION ./    )
   # install( TARGETS run-optimize-cloak   DESTINATION ./    )
   # install( TARGETS run-optimize-feed-cloak   DESTINATION ./    )
   # install( TARGETS run-optimize-alu   DESTINATION ./    )
-  install( TARGETS run-optimize-scatter-Au-SiO2   DESTINATION ./    )
+#  install( TARGETS run-optimize-scatter-Au-SiO2   DESTINATION ./    )
   # install( TARGETS run-optimize-absorber-TiN   DESTINATION ./    )
   # install( TARGETS run-optimize-absorber-TiN-wideband   DESTINATION ./    )
-  install( TARGETS run-optimize-absorber-two-band   DESTINATION ./    )
+#  install( TARGETS run-optimize-absorber-two-band   DESTINATION ./    )
   # install( TARGETS run-optimize-absorber-TiN-bi   DESTINATION ./    )
   #install( TARGETS run-optimize-ideal-bulk   DESTINATION ./    )
   # install( TARGETS run-superscatter-drude   DESTINATION ./    )
