--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,40 +44,40 @@ if((main_project AND BUILD_TESTING) OR BUILD_TESTING_${PROJECT_NAME})
     add_subdirectory(src/tests)
 endif()
 
-# generate package config files
-include(GNUInstallDirs)
-set(project_config "${PROJECT_NAME}Config.cmake")
-set(cmake_files_dir "${CMAKE_CURRENT_BINARY_DIR}/CMakeFiles")
-set(config_install_dir "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}")
-set(config_build_dir "${CMAKE_CURRENT_BINARY_DIR}/${config_install_dir}")
-
-# export targets for install
-install(EXPORT ${TARGETS_EXPORT_NAME}
-    NAMESPACE
-        ${NAMESPACE}
-    DESTINATION
-        ${config_install_dir}
-    COMPONENT Development
-)
-
-# export targets into build
-export(EXPORT ${TARGETS_EXPORT_NAME}
-    NAMESPACE
-        ${NAMESPACE}
-    FILE
-        ${config_build_dir}/${TARGETS_EXPORT_NAME}.cmake
-)
-
-#create package config
-include(CMakePackageConfigHelpers)
-configure_package_config_file(cmake/PackageConfig.cmake.in ${cmake_files_dir}/${project_config}
-    INSTALL_DESTINATION ${config_install_dir}
-)
-install(FILES ${cmake_files_dir}/${project_config}
-    DESTINATION ${config_install_dir}
-)
-
-configure_package_config_file(cmake/PackageConfig.cmake.in ${config_build_dir}/${project_config}
-    INSTALL_DESTINATION ${config_build_dir}
-    INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR}
-)
+## generate package config files
+#include(GNUInstallDirs)
+#set(project_config "${PROJECT_NAME}Config.cmake")
+#set(cmake_files_dir "${CMAKE_CURRENT_BINARY_DIR}/CMakeFiles")
+#set(config_install_dir "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}")
+#set(config_build_dir "${CMAKE_CURRENT_BINARY_DIR}/${config_install_dir}")
+#
+## export targets for install
+#install(EXPORT ${TARGETS_EXPORT_NAME}
+#    NAMESPACE
+#        ${NAMESPACE}
+#    DESTINATION
+#        ${config_install_dir}
+#    COMPONENT Development
+#)
+#
+## export targets into build
+#export(EXPORT ${TARGETS_EXPORT_NAME}
+#    NAMESPACE
+#        ${NAMESPACE}
+#    FILE
+#        ${config_build_dir}/${TARGETS_EXPORT_NAME}.cmake
+#)
+#
+##create package config
+#include(CMakePackageConfigHelpers)
+#configure_package_config_file(cmake/PackageConfig.cmake.in ${cmake_files_dir}/${project_config}
+#    INSTALL_DESTINATION ${config_install_dir}
+#)
+#install(FILES ${cmake_files_dir}/${project_config}
+#    DESTINATION ${config_install_dir}
+#)
+#
+#configure_package_config_file(cmake/PackageConfig.cmake.in ${config_build_dir}/${project_config}
+#    INSTALL_DESTINATION ${config_build_dir}
+#    INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR}
+#)
